# obfustr-rs

./: CHANGELOG  Cargo.toml  README.md
obfustr/: Cargo.toml  README.md  README.tpl
obfustr-macros/: Cargo.toml
obfustr-macros/src/: lib.rs
obfustr/examples/: example.rs
obfustr/src/: lib.rs
obfustr/tests/: obfuscate.rs
