[package]
name = "obfustr-macros"
description = "proc macros for [`obfustr`]"
version = "0.1.1"
license = "BSD-2-Clause"

rust-version = "1.82"
edition = "2021"
publish = ["crates-io"]

[lib]
proc-macro = true

[dependencies]
getrandom = "0.2.15"
proc-macro2 = "1.0.89"
quote = { version = "1.0.37" }
syn = { version = "2.0.85", default-features = false }
